mutants.out/log/crates__sandbox__src__lib.rs_line_586_col_5.log

*** crates/sandbox/src/lib.rs:586:5: replace compile_windows -> CompiledSandboxPlan with Default::default()

*** mutation diff:
--- crates/sandbox/src/lib.rs
+++ replace compile_windows -> CompiledSandboxPlan with Default::default()
@@ -578,43 +578,17 @@
     }
 }
 
 fn compile_windows(
     command: &CommandSpec,
     policy: &SandboxPolicy,
     backend_available: bool,
 ) -> CompiledSandboxPlan {
-    let mut args = vec!["--restricted-token".to_string()];
-
-    for entry in &policy.filesystem.entries {
-        match entry.access {
-            FilesystemAccess::Read => args.push("--allow-read".to_string()),
-            FilesystemAccess::Write => args.push("--allow-write".to_string()),
-            FilesystemAccess::None => args.push("--deny".to_string()),
-        }
-        args.push(entry.path.display().to_string());
-    }
-
-    if policy.network.mode == NetworkMode::Restricted {
-        args.push("--deny-network".to_string());
-    }
-
-    args.push("--".to_string());
-    args.push(command.program.clone());
-    args.extend(command.args.clone());
-
-    CompiledSandboxPlan {
-        backend: backend_report(Platform::Windows, backend_available),
-        program: "manual-windows-sandbox-runner".to_string(),
-        args,
-        current_dir: command.current_dir.clone(),
-        env: command.env.clone(),
-        stdin: command.stdin.clone(),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn path_is_under_writable_entry(policy: &SandboxPolicy, path: &Path) -> bool {
     let path = unix_path_arg(path);
 
     policy.filesystem.entries.iter().any(|entry| {
         let entry_path = unix_path_arg(&entry.path);
         entry.access == FilesystemAccess::Write


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=sandbox@0.1.0
       Dirty sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/crates/sandbox): the file `crates/sandbox/src/lib.rs` has changed (1778057779.002880526s, 8s after last build at 1778057771.704843587s)
   Compiling sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/crates/sandbox)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a114b1d7655828cd -C extra-filename=-84da628582973993 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2b325062dbe2c508 -C extra-filename=-3854b11f8daf2006 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps`
error[E0277]: the trait bound `CompiledSandboxPlan: Default` is not satisfied
   --> crates/sandbox/src/lib.rs:586:5
    |
586 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `CompiledSandboxPlan`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `sandbox` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2b325062dbe2c508 -C extra-filename=-3854b11f8daf2006 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `sandbox` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name sandbox --edition=2024 crates/sandbox/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a114b1d7655828cd -C extra-filename=-84da628582973993 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
